# kas-text

./: .typos.toml  CHANGELOG.md  COPYRIGHT  Cargo.toml  README.md
.config/: extra.dict  spellcheck.toml
.github/workflows/: release.yml  test.yml
design/: bidi.md  complex-layout.md  requirements.md  text-effects.md
src/: allsorts.rs  conv.rs  data.rs  display.rs  env.rs  fonts.rs  format.rs  lib.rs  model.rs  parser.rs  parsers.rs  prepared.rs  raster.rs  rich.rs  shaper.rs  swash_convert.rs  text.rs  util.rs
src/display/: glyph_pos.rs  mod.rs  text_runs.rs  wrap_lines.rs
src/fonts/: attributes.rs  face.rs  families.rs  library.rs  mod.rs  resolver.rs  selector.rs
src/format/: markdown.rs  plain.rs
src/forme/: glyph_pos.rs  mod.rs  text_runs.rs  wrap_lines.rs
src/layout/: builtin.rs  characters.rs  layout_test.rs  linebreak.rs  lines.rs  mod.rs  section.rs  words.rs
src/parser/: markdown.rs
src/parsers/: markdown.rs
src/prepared/: glyph_pos.rs  text_runs.rs  wrap_lines.rs
src/rich/: markdown.rs
tests/: json.rs
