[package]
name = "kas-text"
version = "0.8.1"
authors = ["Diggory Hardy <git@dhardy.name>"]
edition = "2021"
license = "Apache-2.0"
description = "Text layout and font management"
readme = "README.md"
documentation = "https://docs.rs/kas-text/"
keywords = ["text", "bidi", "shaping"]
categories = ["text-processing"]
repository = "https://github.com/kas-gui/kas-text"
exclude = ["design"]
rust-version = "1.82.0"

[package.metadata.docs.rs]
# To build locally:
# RUSTDOCFLAGS="--cfg docsrs" cargo +nightly doc --all-features --no-deps --open
all-features = true

[features]
# Support num_glyphs method
num_glyphs = []

# Enable shaping with the default dependency.
shaping = ["rustybuzz"]
# Enable shaping via rustybuzz.
rustybuzz = ["dep:rustybuzz"]

# Enable Markdown parsing
markdown = ["pulldown-cmark"]

# Serialization is optionally supported for some types:
serde = ["dep:serde", "bitflags/serde"]

# Optional: expose ab_glyph font face
ab_glyph = ["dep:ab_glyph"]

[dependencies]
cfg-if = "1.0.0"
easy-cast = "0.5.0"
bitflags = "2.4.2"
ttf-parser = "0.25.1"
smallvec = "1.6.1"
tinyvec = { version = "1.9.0", features = ["alloc"] }
unicode-bidi = "0.3.4"
unicode-bidi-mirroring = "0.4.0"
thiserror = "2.0.12"
pulldown-cmark = { version = "0.13.0", optional = true }
log = "0.4"
serde = { version = "1.0.123", features = ["derive"], optional = true }
ab_glyph = { version = "0.2.10", optional = true }
swash = "0.2.4"
fontique = "0.5.0"

[dependencies.rustybuzz]
version = "0.20.1"
optional = true

[lints.clippy]
len_zero = "allow"
type_complexity = "allow"
unit_arg = "allow"
needless_lifetimes = "allow"
neg_cmp_op_on_partial_ord = "allow"
manual_range_contains = "allow"
